--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,17 @@
 name: feather_icons
 description: Flutter package for Feather Icons
 version: 1.0.0
-author: dangtienngoc
 homepage: https://apcheap.io
 
 environment:
-  sdk: ">=2.12.0-0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  recase: ^4.0.0-nullsafety.0
+#  recase: ^4.0.0-nullsafety.0
 
 dev_dependencies:
   flutter_test:
