--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: feather_icons
-description: Flutter package for Feather Icons
-version: 1.0.0
-homepage: https://apcheap.io
+description: Feather is a collection of simply beautiful open source icons. Each icon is designed on a 24x24 grid with an emphasis on simplicity, consistency, and flexibility.
+version: 1.0.1
+homepage: https://appcheap.io/
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
