--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: feather_icons
 description: Feather is a collection of simply beautiful open source icons. Each icon is designed on a 24x24 grid with an emphasis on simplicity, consistency, and flexibility.
-version: 1.0.1
+version: 1.1.0-nullsafety.0
 homepage: https://appcheap.io/
 
 environment:
